Finished up dealing with main items and related nonsense